--- a/resources/config.yml
+++ b/resources/config.yml
@@ -79,7 +79,7 @@ worlds:
       - "line2"
 
 # true or false if you want the command for disable the scoreboard
-command: false
+command: true
 command_description: "Hide or show the scoreboard"
 command_success_hide: "§aYou have successfully hidden the scoreboard"
 command_success_show: "§aYou have successfully displayed the scoreboard"
